2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir.c (diskfs_lookup_hard, diskfs_dirempty): Call
	diskfs_set_node_atime instead of setting dp->dn_set_atime.

2005-07-12  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c (diskfs_get_filemap): Initialize upi->max_prot to PROT.

2004-11-08  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* storeinfo.c (diskfs_S_file_get_storage_info): Cast -1 to
	store_offset_t in conditional operator, instead of implicitly cast
	to uint32_t.

2004-01-10  Roberto Reale  <rreale@iol.it>

	* ext2fs.h (ext2_getblk): Fix typo in comment.
	* getblk.c (ext2_getblk): Likewise.
	* dir.c (diskfs_get_directs): Likewise.

2002-10-08  Roland McGrath  <roland@frob.com>

	* ext2fs.h (struct disknode): New member `info_i_translator'.
	* inode.c (diskfs_set_translator): Update NP->dn->info_i_translator.
	* ialloc.c (diskfs_alloc_node): Clear a nonzero translator block in
	the on-disk inode just as we do for data blocks.

2002-07-31  Roland McGrath  <roland@frob.com>

	* dir.c (diskfs_direnter_hard): Fix test in last change.

2002-06-08  Roland McGrath  <roland@frob.com>

	* inode.c (diskfs_cached_lookup): Use ino_t for argument.

	* ialloc.c (diskfs_free_node): Use %Ld format for ino_t/off_t values.
	* pager.c (diskfs_grow, pager_unlock_page): Likewise.
	* inode.c (read_node): Likewise.
	* dir.c (diskfs_get_directs): Likewise.

	* dir.c (diskfs_direnter_hard): Use size_t for OLDSIZE.
	Fail with EOVERFLOW when it would exceed that width.

2002-04-05  Neal H Walfield  <neal@cs.uml.edu>

	* pager.c (diskfs_grow): Correctly recalculate NEW_SIZE.

2002-05-29  Roland McGrath  <roland@frob.com>

	* dir.c (dirscanblock): Use %z format.
	(diskfs_get_directs): Likewise.
	* ext2fs.c (main): Likewise.
	* hyper.c (get_hypermetadata): Likewise.
	* pager.c (pager_unlock_page): Likewise.

2002-05-28  Roland McGrath  <roland@frob.com>

	* ext2fs.c (diskfs_append_args): unsigned -> size_t
	* dir.c (count_dirents): int -> size_t