@@ -1,3 +1,8 @@
+2007-12-11  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* inode.c (read_node, write_node): Suggest what needs to be done in the
+	future w.r.t. ``struct stat'' changes.
+
 2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* dir.c (diskfs_lookup_hard, diskfs_dirempty): Call
